# rp-runner-switcher

./: Cargo.toml  README.md
examples/blinky_embassy/: build.rs
examples/blinky_embassy/.cargo/: config.toml
examples/blinky_embassy/src/: main.rs
src/: main.rs
